--- a/app/views/includes/header.pug
+++ b/app/views/includes/header.pug
@@ -1,6 +1,5 @@
-meta(name="viewport", content="width=device-width,initial-scale=1")
-link(href="/libs/bootstrap/dist/css/bootstrap.min.css", rel="stylesheet")
+meta(name="viewport", content="width=device-width, initial-scale=1")
+link(href="/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet")
 link(href="/libs/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet")
-link(href="/css/mystyle.css" rel="stylesheet")
 script(src="/libs/jquery/dist/jquery.min.js")
 script(src="/libs/bootstrap/dist/js/bootstrap.min.js")
