--- a/app/views/pages/signInPatient.pug
+++ b/app/views/pages/signInPatient.pug
@@ -2,11 +2,32 @@ extends ../layout.pug
 
 block content
 	div.container
-		form.form-signin
-			h2.form-signin-heading Please sign in
-			label(for="inputId").sr-only ID card
-			input(type="text" placeholder="Id card number" required autofocus)#inputId.form-control
-			label(for="inputPassword").sr-only Password
-			input#inputPassword.form-control(type="password"  placeholder="password" required)
-			button.btn.btn-lg.btn-primary.btn-block(type="submit") Sign in
-			
+		.row
+			.col-md-6
+				.jumbotron
+					h1 First Come In?
+					p.lead sign up your account!
+					a.btn.btn-primary.btn-lg sign up
+			.col-md-6
+				form.form-signin.form-orizontal
+					h2.form-signin-heading Sign in
+					.row
+						.form-group
+							label(for="inputId").col-sm-2.control-label ID card
+							.col-sm-10
+								input(type="text" placeholder="input your Id card number" required autofocus)#inputId.form-control
+					.row
+						br
+						br
+					.row
+						.form-group
+							label(for="password").col-sm-2.control-label Password
+							.col-sm-10
+								input(type="password" placeholder="input your password" required autofocus)#password.form-control
+					.row
+						br
+						br
+					.row
+						.form-group
+							.col-sm-offset-2.col-sm-10
+								button.btn.btn-lg.btn-primary.btn-block(type="submit") Sign in
