--- a/app/views/pages/patientInfoInDoctor.pug
+++ b/app/views/pages/patientInfoInDoctor.pug
@@ -13,33 +13,33 @@ block content
 			.row
 				.col-md-4.text-center
 					h4 Id card Number: 
-					p #{user.id}
+					p #{patient.id}
 				.col-md-4.text-center 
 					h4 Last Name:
-					p #{user.lastName}
+					p #{patient.lastName}
 				.col-md-4.text-center
 					h4 First Name:
-					p #{user.firstName}
+					p #{patient.firstName}
 			.row
 				.col-md-4.text-center
 					h4 Gender: 
-					p #{user.gender}
+					p #{patient.gender}
 				.col-md-4.text-center 
 					h4 Birth:
-					p #{user.birth}
+					p #{patient.birth}
 				.col-md-4.text-center
 					h4 Email:
-					p #{user.email}
+					p #{patient.email}
 			.row
 				.col-md-4.text-center
 					h4 Mobile Phone: 
-					p #{user.mobileNo}
+					p #{patient.mobileNo}
 				.col-md-4.text-center 
 					h4 Join Time:
-					p #{user.createAt}
+					p #{patient.createAt}
 				.col-md-4.text-center
 					h4 Last modify Time:
-					p #{user.updateAt}
+					p #{patient.updateAt}
 		.row
 			.col-md-4
 				a.btn.btn-info.btn-lg view your medical records
