--- a/app/views/pages/signIndoctr.pug
+++ b/app/views/pages/signIndoctr.pug
@@ -2,10 +2,10 @@ extends ../layout.pug
 
 block content
 	div.container
-		form.form-signin
-			h2.form-signin-heading Please sign in
-			label(for="inputId").sr-only ID card
-			input(type="text" placeholder="Id card number" required autofocus)#inputId.form-control
+		form.form-signin.form-orizontal(method="POST" action="/doctor/signInDoctorHandler")
+			h2.form-signin-heading Doctor, Please sign in
+			label(for="inputId").sr-only User Id
+			input(type="text" placeholder="Id card number" name="doctorId" required autofocus)#inputId.form-control
 			label(for="inputPassword").sr-only Password
-			input#inputPassword.form-control(type="password"  placeholder="password" required)
+			input#inputPassword.form-control(type="password"  placeholder="password" name="doctorPassword" autofocus required)
 			button.btn.btn-lg.btn-primary.btn-block(type="submit") Sign in
