--- a/app/views/pages/signUp_inputId.pug
+++ b/app/views/pages/signUp_inputId.pug
@@ -3,11 +3,13 @@ extends ../layout.pug
 block content
 		.container
 			.jumbotron
-				form
-					form-group
-						label(for="inputId").control-label.h4 Please input your unique ID card number
+				form(method="POST", action="/signUpInputHandler")
+					.form-group
+						.row
+							label(for="inputId").control-label.h4 Please input your unique ID card number
 						.row
 							.col-md-5
-								input.form-control(type="text" placeholder="Your ID Card Number")#inputId
-							.col-md-7
-								button.btn.btn-primary.btn-lg(type="submit") Sumbit
+								input.form-control(type="text" placeholder="Your ID Card Number" name="inputIdNo")#inputId
+					.form-group
+						.col-md-7
+							button.btn.btn-primary.btn-lg(type="submit") Sumbit
