--- a/app/views/pages/patientInfoInDoctor.pug
+++ b/app/views/pages/patientInfoInDoctor.pug
@@ -3,8 +3,7 @@ extends ../layout.pug
 block content
 	.container
 		.row
-			.col-md-4
-				h1.bg-info Patient's information
+			h1 Welcome Doctor #{doctor.lastName}, this is your patient's information
 		.row
 			br
 		.row
@@ -42,9 +41,10 @@ block content
 					p #{patient.updateAt}
 		.row
 			.col-md-4
-				a.btn.btn-info.btn-lg view your medical records
+				-var link='/medicalRecords/'+patient.linkDynamoDB
+				a.btn.btn-info.btn-lg(href=link) view your patient's medical records
 			.col-md-4.col-md-offset-4
-				a.btn.btn-success.btn-lg add the records
+				a.btn.btn-success.btn-lg(href='/medicalRecords/add') add the records
 
 
 
