--- a/app/views/pages/medicalRecords.pug
+++ b/app/views/pages/medicalRecords.pug
@@ -9,7 +9,7 @@ block content
 			br
 		.row
 			br
-		each item in records
+		each item in Info
 			.panel.panel-success
 				.panel-heading
 					.row
