--- a/app/views/pages/patientInfo.pug
+++ b/app/views/pages/patientInfo.pug
@@ -42,8 +42,9 @@ block content
 					p #{patient.updateAt}
 		.row
 			.col-md-4
-				-var link='/medicalRecords/'+patient.linkDynamoDB
-				a.btn.btn-info.btn-lg(href=link) view your medical records
+				form(method="Get" action="/medicalRecords")
+					.form-group
+						button(type="submit").btn.btn-info.btn-lg view your medical records
 
 
 
